--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;}
+h1{color:gray;}
 
 
+#carddd{
+    background-color: white;
+    width: fit-content;
+    padding: 20px 40px;
+    margin: auto;
+}
